# dystellar-backend-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  schema.sql  test.db
data/: db
src/: main.rs
src/api/: encoder.rs  mod.rs  service.rs  utils.rs
src/api/control/: http.rs  inotify.rs  ioutils.rs  microsoft_lifecycle.rs  mod.rs  mod_utils.rs  sql.rs
src/api/control/sql/: mod.rs  query.rs  setup.rs
src/api/control/storage/: query.rs  setup.rs
src/api/routers/: auth.rs  core.rs  downloads_center.rs  microsoft.rs  mod.rs  mods.rs  privileged.rs  punish.rs  redirections.rs  repository.rs  signal.rs  state.rs  stream.rs  users.rs
src/api/typedef/: config.rs  http.rs  jsonutils.rs  microsoft.rs  mod.rs  permissions.rs  punishment.rs  routing.rs  states.rs  user.rs
src/api/typedef/dtos/: network.rs
src/api/typedef/fs_json/: mod.rs  redirects.rs  state.rs
src/api/typedef/mailing/: coins.rs  message.rs  mod.rs
src/api/typedef/punishments/: ban.rs  blacklist.rs  mod.rs  mute.rs  ranked_ban.rs  warn.rs
src/api/typedef/routing/: endpoint.rs  mod.rs  nodes.rs
