[package]
name = "dystellar-backend-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
dotenv = "0.15.0"

[dependencies]
tokio = { version = "1.43.0", features = ["full"]}
argon2 = "0.5.3"
hyper = { version = "1.5.2", features = ["http2", "http1", "client", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
json = "0.12.4"
libsql = { version = "*", default-features = false, features = ["core"]}
