[package]
name = "dystellar-backend-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
dotenv = "0.15.0"

[dependencies]
tokio = { version = "1.43.0", features = ["full"]}
argon2 = "0.5.3"
hyper = { version = "1.5.2", features = ["http2", "http1", "client", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
json = "0.12.4"
chrono = { version = "0.4.41", features = ["alloc", "std", "now"] }
sled = "0.34.7"
inotify-sys = "0.1.5"
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"
zip = "4.3.0"
