[package]
name = "dystellar-backend-rs"
version = "0.2.0"
edition = "2024"

[build-dependencies]
dotenv = "0.15.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"

[dependencies]
tokio = { version = "1.43.0", features = ["full"]}
argon2 = "0.5.3"
hyper = { version = "1.5.2", features = ["http2", "http1", "client", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
json = "0.12.4"
chrono = { version = "0.4.41", features = ["alloc", "std", "now"] }
sled = "0.34.7"
inotify-sys = "0.1.5"
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"
zip = "4.3.0"
tokio-util = "0.7.16"
futures-core = "0.3.31"
futures = "0.3.31"
mime_guess = "2.0.5"
sha2 = "0.10.9"
rayon = "1.11.0"
hyper-tungstenite = "0.19.0"
tungstenite = "0.28.0"
